# dodo-connector

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: capabilities.example.yaml  pizzerias.example.json  pizzerias.generated.json  policy.example.yaml  tools.example.yaml
docs/: API_PRIORITY.md  ARCHITECTURE.md  AUTOMATION_CANDIDATES.md  BRIDGE_UPDATE_CHECK.md  CHATGPT_AGENT_KNOWLEDGE.md  CHATGPT_AGENT_PROMPT.md  CVM_REPORT_METRICS.md  DODO_AUTH.md  DODO_DATA_FUNCTIONS.md  EMPLOYEE_DISCOUNT.md  GOOGLE_SHEETS_AUTOMATION_TZ.md  MCP_ADAPTER.md  OPENCLAW_TASKS.md  PLAN.md  PROJECT_STATUS.md
dodo_bridge/: __init__.py  analytics_clients_phone.py  analytics_employee_discount.py  analytics_kiosk_sales.py  analytics_routes.py  audit.py  auth.py  auth_routes.py  capabilities.py  config.py  dodo_data.py  dodo_data_routes.py  kb_auth_routes.py  learning.py  main.py  mcp_routes.py  models.py  pizzerias.py  policy.py  registry.py  sales_cache.py  security.py  system_routes.py
recipes/: get_employee_discount.yml
scripts/: __init__.py  check_bridge_health.py  dodo_auth_flow.mjs  dodo_kb_auth_flow.mjs  dodo_office_manager_reports.py  export_chatgpt_openapi.py  ingest_dodo_postman.py  refresh_dodo_token.py  refresh_sales_summary_cache.py  superset_chart_data.mjs
tests/: test_api.py  test_auth_routes.py  test_automation_routes.py  test_chatgpt_openapi_route.py  test_check_bridge_health.py  test_dodo_data_routes.py  test_employee_discount.py  test_export_chatgpt_openapi.py  test_learning.py  test_mcp_routes.py  test_pizzerias.py  test_policy.py  test_system_routes.py  (+3 more)
(+15 files in other folders)
